# frello

./: .dockerignore  .gitignore  .prettierrc.json  Dockerfile  Dockerfile.django.dev  Dockerfile.django.local  Dockerfile.local  Dockerfile.vue.local  LICENSE  README.md  RELEASE.txt  docker-compose.yml  index.html  jsconfig.json  manage.py  nodemon.json  package-lock.json  package.json  pyproject.toml  requirements.txt  webpack.config.js
.github/workflows/: ci.yaml  code-quality.yaml  release.yml
assets/: HomeApp.vue  Login.vue  LoginApp.vue  home.js  login.js
config/: __init__.py  asgi.py  urls.py  wsgi.py
config/settings/: __init__.py  base.py  dev.py  prod.py  test.py
custom_auth/: admin.py  app.py  forms.py  models.py  urls.py  views.py
custom_auth/migrations/: 0001_initial.py
custom_auth/tests/: test_views.py
frello/: app.py  models.py  urls.py  views.py
frello/migrations/: 0001_initial.py  0002_alter_project_unique_together.py  0003_rename_create_by_issue_created_by.py  0004_issue_description_issue_title.py  0005_alter_project_description.py  0006_issue_assigned_to.py
frello/tests/: test_views.py
public/js/: script.js
src/: App.vue  icons.ts  main.ts
src/assets/: base.scss
src/components/: NavBar.vue
src/router/: index.ts
src/views/: DashBoard.vue  ProjectPage.vue
templates/: base.html  base_generic.html  dashboard.html  landing_page.html  login_page.html  sidebar.html
templates/base/: base.html
templates/frello/: base.html  contributor_list.html  dashboard.html  issue_detail.html  issue_list.html  issue_page.html  project_page.html  sidebar.html  your_project_list.html
templates/users/: login.html
users/: __init__.py  admin.py  app.py  forms.py  models.py
users/migrations/: 0001_initial.py
users/tests/: __init__.py  conftest.py  factory.py  test_models.py
